WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71864
Fix OSR entry points to calculate offsets correctly WRT to branch compaction.
https://bugs.webkit.org/show_bug.cgi?id=71864
Summary
Fix OSR entry points to calculate offsets correctly WRT to branch compaction.
Gavin Barraclough
Reported
2011-11-08 16:15:31 PST
We need to delay taking the offset until we have the link buffer.
Attachments
Fix
(11.20 KB, patch)
2011-11-08 16:23 PST
,
Gavin Barraclough
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2011-11-08 16:23:43 PST
Created
attachment 114172
[details]
Fix
Gavin Barraclough
Comment 2
2011-11-08 16:43:27 PST
Fixed in
r99633
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug