Source/JavaScriptCore/jit/JIT.h
@@ -1087,12 +1087,6 @@ namespace JSC {
 #if ENABLE(VALUE_PROFILER)
         bool m_canBeOptimized;
 #endif
-#if ENABLE(DFG_JIT) || ENABLE(JIT_VERBOSE)
-        Label m_startOfCode;
-#endif
-#if ENABLE(DFG_JIT)
-        CompactJITCodeMap::Encoder m_jitCodeMapEncoder;
-#endif
     } JIT_CLASS_ALIGNMENT;
 
     inline void JIT::emit_op_loop(Instruction* currentInstruction)
